<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="Connection Settings">

    <EditTextPreference
        android:key="@string/key_pref_school_code"
        android:title="@string/school_code_hint"
        android:summary="@string/school_code_description"
        android:dialogTitle="School Code" />
    <EditTextPreference
        android:title="@string/authorization_code_hint"
        android:summary="@string/authorization_code_description"
        android:inputType="number"
        android:dialogTitle="Authorization" />
    </PreferenceCategory>
    <Preference android:title="@string/verify_title"
                android:key="@string/verify_button_key"
                android:summary="@string/verify_summary"/>


</PreferenceScreen>