<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:text="@string/how_to"/>

    <EditText
        android:id="@+id/school_code_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/school_code_hint"
        android:layout_margin="8dp"
        android:inputType="text"/>
    <EditText
        android:id="@+id/authorization_code_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:hint="@string/authorization_code_hint"
        android:inputType="number"/>
    <EditText
        android:id="@+id/user_code_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/user_code_hint"
        android:layout_margin="8dp"
        android:inputType="text"/>


</LinearLayout>